--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "TokenOptions": {
+    "Audience": "emre@emre.com",
+    "Issuer": "emre@emre.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "my-keyis%&very?0interest1ngQxx/*-*/)((ertbytqwerty!.,devamke"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
